hooked up angular

--- a/app/templates/layout.jade
+++ b/app/templates/layout.jade
@@ -12,7 +12,8 @@ html
   body
     include partials/header
 
-    .container
+    .container(ng-app='atmebro')
       block content
 
+    include partials/javascripts
     include partials/footer
