--- a/app/post/index.jade
+++ b/app/post/index.jade
@@ -5,7 +5,7 @@ block content
     input(name='text')
     input(type='submit')
 
-  ul
-    each post in posts
-      li
-        a(href='/post/' + post._id)= post.text
+  div(ng-controller="PostCtrl as post")
+    ul
+      li(ng-repeat="p in post.data")
+        a(href='/post/{{p._id}}') {{p.text}}
